<?xml version="1.0"?>
<package>
  <name>turtle_monitor</name>
  <version>0.0.0</version>
  <description>The turtle_monitor package</description>

  <maintainer email="davidmtamas@gmail.com">dmt</maintainer>

  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend>
  
</package>
